--- a/views/vwWriter/manage-articles.hbs
+++ b/views/vwWriter/manage-articles.hbs
@@ -84,7 +84,7 @@
     {{!-- Danh sách các bài viết chưa được duyệt --}}
     <div class="tab-pane fade" id="pills-pending" role="tabpanel" aria-labelledby="pills-pending-tab">
         {{#if this.isDraftEmpty}}
-        Bạn chưa có tin nào đang chờ được duyệt, viết một tin mới tại <a href="/writer/draft-articles">đây</a>.
+        Bạn chưa có tin nào đang chờ được duyệt, viết một tin mới tại <a href="/writer/create-articles">đây</a>.
         {{/if}}
         {{#each this.draftArticles}}
         <div class="row mb-3" style="border-radius: 10px; ">
