--- a/views/layouts/writer.hbs
+++ b/views/layouts/writer.hbs
@@ -33,7 +33,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/writer/draft-articles">
+                        <a href="/writer/create-articles">
                             {{#if this.isCreate}}
                             <img src="/others/quill-pen (1).png" class="mr-2">
                             <span style="color: red;">Đăng tin mới</span>
