--- a/views/vwWriter/manage-articles.hbs
+++ b/views/vwWriter/manage-articles.hbs
@@ -48,7 +48,7 @@
     {{!-- Danh sách các bài viết đã được duyệt --}}
     <div class="tab-pane fade show active" id="pills-approved" role="tabpanel" aria-labelledby="pills-approved-tab">
         {{#if this.isAvailableEmpty}}
-        Bạn chưa có tin nào xuất bản hay chờ xuất bản, viết một tin mới tại <a href="/writer/draft-articles">đây</a>.
+        Bạn chưa có tin nào xuất bản hay chờ xuất bản, viết một tin mới tại <a href="/writer/create-articles">đây</a>.
         {{/if}}
         {{#each this.availableArticles}}
         <div class="row mb-3" style="border-radius: 10px; ">
