--- a/views/vwAdmin/categories/categories-menu.hbs
+++ b/views/vwAdmin/categories/categories-menu.hbs
@@ -2,8 +2,21 @@
     <link rel="stylesheet"
           href="/static/css/admin/admin-categories.css">
 {{/section}}
+{{#section 'js'}}
+    <script>
+        $(document).ready(function () {
+            const deleted = $('#deleted').val().toString();
+            console.log(deleted);
+            if (deleted === 'true') {
+                $('#liveToastTrue').toast('show');
+            } else {
+                $('#liveToastFalse').toast('show');
+            }
+        });
+    </script>
 
-<div class="bg-white p-4" style="border-radius: 10px">
+{{/section}}
+<div class="bg-white shadow px-4 pt-3 pb-5 position-relative" style="border-radius: 10px;min-height: 797px ">
     <div class="d-flex justify-content-between">
         <h3>Danh sách chuyên mục </h3>
         <a class="btn btn-outline-success font-weight-bold d-flex align-items-center" href="/admin/categories/add">
@@ -14,21 +27,20 @@
         </a>
     </div>
     <div class="border-bottom mt-3 ">
-        <div class="row text-white rounded " style="padding: 0.5rem;background-color: #FF3030">
+        <div class="row text-white rounded " style="padding: 0.5rem;background-color: #EF314C">
             <h4 class="col-3 d-flex justify-content-center"><span>Tên chuyên mục</span>
             </h4>
-            <h4 class="col-7 d-flex justify-content-center"><span class="ml-4">Chuyên mục con</span></h4>
-            <div class="col-2 ">
-
+            <h4 class="col-6 d-flex justify-content-center"><span class="ml-4">Chuyên mục con</span></h4>
+            <div class="col-3 ">
             </div>
         </div>
     </div>
-    <div>
+    <div class="scrollable-content" style="max-height: 600px">
         {{#each this.categoryList}}
             <div class="row  border  category-section">
                 <div class="col-3  category-section__category-name"><span>{{name}}</span>
                 </div>
-                <div class="col-7   category-section__child-category">
+                <div class="col-6   category-section__child-category">
                     {{#if this.childCats}}
                         {{#each childCats}}
                             <a class="m-1">{{name}}</a>
@@ -36,14 +48,51 @@
                     {{else}}
                         Không có gì hết :3.
                     {{/if}}
-
                 </div>
-                <div class="col-2 category-section__btn-edit">
-                    <button class="btn btn-outline-primary">
-                        <i class="bi bi-pencil-square mr-1"></i>Sửa
-                    </button>
+                <div class="col-3 category-section__btn-edit d-flex justify-content-center">
+                    <a href="/admin/categories/edit?catId={{id}}" class="btn btn-outline-success mr-3">
+                    <i class="bi bi-pencil-square mr-1"></i>Sửa
+                    </a>
+                    <a href="/admin/categories/delete?catId={{id}}" class="btn btn-outline-danger">
+                    <i class="bi bi-trash mr-1"></i>Xóa
+                    </a>
                 </div>
             </div>
         {{/each}}
+    </div>
+    <input hidden="hidden" value="{{this.deleted}}" id="deleted">
+    <div class="position-absolute bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
+        <div id="liveToastFalse" class="toast show" role="alert" aria-live="assertive" aria-atomic="true"
+             data-delay="4000">
+            <div class="toast-header">
+                <img src="/static/images/others/unchecked.png" class=" mr-1" width="20px" height="20px"/>
+                <strong class="mr-auto text-white px-3" style="background-color: #FC3850; border-radius: 10px">Xóa thất
+                    bại</strong>
+                <small>mới đây</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body text-center">
+                Xin lỗi, chúng tôi gặp vấn đề khi xóa chuyên mục '{{this.categoryName}}'
+            </div>
+        </div>
+    </div>
+    <div class="position-absolute bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
+        <div id="liveToastTrue" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
+             data-delay="4000" style="min-width: 300px">
+            <div class="toast-header">
+                <img src="/static/images/others/checked.png" class=" mr-1" width=20px" height="20px"/>
+                <strong class="mr-auto  text-white px-3" style="background-color: #1E8E23; border-radius: 10px">Xóa
+                    thành công</strong>
+                <small>mới đây</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body text-center">
+                Đã xóa chuyên mục '{{this.categoryName}}'
+            </div>
+        </div>
     </div>
 </div>
