--- a/views/vwAdmin/categories/categories-add.hbs
+++ b/views/vwAdmin/categories/categories-add.hbs
@@ -83,7 +83,7 @@
             const added = $('#added').val().toString();
             if (added === 'true') {
                 $('#liveToastTrue').toast('show');
-            }else{
+            } else {
                 $('#liveToastFalse').toast('show');
             }
         });
@@ -122,32 +122,34 @@
     <input hidden="hidden" value="{{this.added}}" id="added">
     <div class="position-absolute bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
         <div id="liveToastTrue" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
-             data-delay="4000">
+             data-delay="4000" style="min-width: 300px">
             <div class="toast-header">
-                <img src="/static/images/others/checked.png" class=" mr-1" width="16px" height="16px"/>
-                <strong class="mr-auto">Thêm thành công</strong>
+                <img src="/static/images/others/checked.png" class=" mr-1" width="20px" height="20px"/>
+                <strong class="mr-auto text-white px-3" style="background-color: #1E8E23; border-radius: 10px">Thêm
+                    thành công</strong>
                 <small>mới đây</small>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="toast-body">
-               Đã thêm chuyên mục '{{this.catName}}'
+            <div class="toast-body text-center">
+                Đã thêm chuyên mục '{{this.catName}}'
             </div>
         </div>
     </div>
     <div class="position-absolute bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
         <div id="liveToastFalse" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
-             data-delay="4000">
+             data-delay="4000" style="min-width: 300px">
             <div class="toast-header">
                 <img src="/static/images/others/unchecked.png" class=" mr-1" width="16px" height="16px"/>
-                <strong class="mr-auto">Thêm thất bại</strong>
+                <strong class="mr-auto text-white px-3" style="background-color: #FC3850; border-radius: 10px">Thêm thất
+                    bại</strong>
                 <small>mới đây</small>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="toast-body">
+            <div class="toast-body text-center">
                 Không thể thêm chuyên mục '{{this.catName}}' <br/>
                 Có thể chuyên mục này đã tồn tại.
             </div>
