--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -10,77 +10,85 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/static/css/account-information/layout-account.css">
-    {{{_sections.css}}}    
+    {{{_sections.css}}}
 </head>
 
-<body style="background-color: #FFFFFF"> 
-    
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f90606;">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            Tuổi Già ♥
+<body style="background-color: #FFFFFF">
 
-            <form class="form-inline my-2 my-lg-0 ml-auto d-flex align-items-center" id="searchForm" method="get"
-                action="/search">
-                <div class="input-container"
-                    style="position: relative; display: inline-block; outline: none; box-shadow: none;">
-                    <button class="fa fa-search border-0 bg-transparent mr-2 pl-0" aria-hidden="true" type="submit"
-                        style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%); color: #888;"></button>
+    <nav class="navbar navbar-expand-lg navbar-light"
+        style="background: linear-gradient(90.13deg, #e30e16 18.76%, #c90009 96.9%);">
+        <div style="width: 1320px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
+            <div>
+                Tuổi Già ♥
+            </div>
 
-                    <input class="form-control mr-sm-2" type="search" placeholder="Nhập nội dung cần tìm"
-                        id="searchInput" aria-label="Search"
-                        style="padding-left: 30px; width: 250px; margin-right: 15px; outline: none; box-shadow: none;">
-                </div>
+            <div style="display: flex; align-items: center; margin-left: auto;">
+                <form class="form-inline d-flex align-items-center" id="searchForm" method="get" action="/search"
+                    style="display: flex; align-items: center; margin-right: 15px;">
+                    <div class="input-container" style="position: relative; display: inline-block;">
+                        <button class="fa fa-search border-0 bg-transparent mr-2 pl-0" aria-hidden="true" type="submit"
+                            style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%); color: #888;"></button>
+                        <input class="form-control" type="search" placeholder="Nhập nội dung cần tìm" id="searchInput"
+                            aria-label="Search" style="padding-left: 30px; width: 250px; outline: none;">
+                    </div>
+                </form>
 
-            </form>
+                <a href="#" class="btn btn-primary"
+                    style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-right: 10px;">
+                    <i class="fas fa-user-circle fa-lg fa-fw" style="color: #fdfdfd;"></i>
+                </a>
 
-            <a href="#" class="btn btn-primary"
-                style="background-color: transparent; border:transparent; outline: none; box-shadow: none; margin-right: 10px;"><i
-                    class="fas fa-user-circle fa-lg fa-fw" style="color: #fdfdfd;"></i></a>
+                <a href="#" class="btn btn-primary" style="outline: none; box-shadow: none;">
+                    Đăng ký Tuổi Già Sao
+                </a>
 
-            <a href="#" class="btn btn-primary" style="outline: none; box-shadow: none;">Đăng ký Tuổi Già Sao</a>
-
-            <a href="#" class="btn btn-primary"
-                style="background-color: transparent; border:transparent; outline: none; box-shadow: none; margin-left: 10px;"><i
-                    class="far fa-question-circle fa-lg fa-fw"></i></a>
+                <a href="#" class="btn btn-primary"
+                    style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-left: 10px;">
+                    <i class="far fa-question-circle fa-lg fa-fw"></i>
+                </a>
+            </div>
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand navbar-light bg-light sticky-top">
-        <ul class="nav navbar-nav d-flex align-items-center">
-            <li class="nav-item active">
-                <a class="nav-link" href="/"><i class="fas fa-home fa-lg fa-fw" style="color: #f90606;"></i></a>
-            </li>
+    <nav class="navbar navbar-expand navbar-light bg-light sticky-top" style="background-color: #f8f9fa;">
+        <div style="width: 1340px; margin: 0 auto; display: flex; align-items: center;">
+            <ul class="nav navbar-nav d-flex align-items-center"
+                style="display: flex; padding: 0; margin: 0; list-style: none;">
+                <li class="nav-item active" style="margin-right: 15px;">
+                    <a class="nav-link" href="/" style="display: flex; align-items: center;">
+                        <i class="fas fa-home fa-lg fa-fw" style="color: #f90606;"></i>
+                    </a>
+                </li>
 
-            <li class="nav-item active">
-                <div class="dropdown">
-                    <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-                        aria-expanded="false"
-                        style="color: black; background-color: transparent; border:transparent; outline: none; box-shadow: none;">
-                        Chuyên mục </a>
-
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Chuyên mục con</a>
-                        <a class="dropdown-item" href="#">Chuyên mục con</a>
+                <li class="nav-item active" style="margin-right: 15px;">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button"
+                            data-toggle="dropdown" aria-expanded="false"
+                            style="color: black; background-color: transparent; border: transparent; outline: none; box-shadow: none;">
+                            Chuyên mục
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Chuyên mục con</a>
+                            <a class="dropdown-item" href="#">Chuyên mục con</a>
+                        </div>
                     </div>
-                </div>
-            </li>
+                </li>
 
-            <li class="nav-item active">
-                <div class="dropdown">
-                    <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-                        aria-expanded="false"
-                        style="color: black; background-color: transparent; border:transparent; outline: none; box-shadow: none;">
-                        Chuyên mục </a>
-
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Chuyên mục con</a>
-                        <a class="dropdown-item" href="#">Chuyên mục con</a>
+                <li class="nav-item active" style="margin-right: 15px;">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button"
+                            data-toggle="dropdown" aria-expanded="false"
+                            style="color: black; background-color: transparent; border: transparent; outline: none; box-shadow: none;">
+                            Chuyên mục
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Chuyên mục con</a>
+                            <a class="dropdown-item" href="#">Chuyên mục con</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-
-
-        </ul>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     {{{body}}}
