change vwHome/home.hbs layout

--- a/views/vwHome/home.hbs
+++ b/views/vwHome/home.hbs
@@ -80,7 +80,7 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết nổi bật nhất trong tuần
+                    <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết mới nhất
                     </h2>
 
                     <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
@@ -155,7 +155,7 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết nổi bật nhất trong tuần
+                    <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết hot
                     </h2>
 
                     <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
@@ -232,62 +232,62 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h5 class="card-title text-center">Cùng chuyên mục</h5>
+                    <h5 class="card-title text-center">Chuyên mục hot</h5>
 
                     <div class="list-group list-group-flush">
                         <a href="#" class="list-group-item list-group-item-action">
-                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                                          
+                            <div class="d-flex w-100 justify-content-between">
+                                <small style="font-weight: bolder; color: red">Chuyên mục</small>
+                                <small>Ngày đăng</small>
+                            </div>
 
                             <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo" style="object-fit: cover;">
 
-                            <div class="d-flex w-100 justify-content-between">
-                                <small>Chuyên mục</small>
-                                <small>Ngày đăng</small>
-                            </div>                            
+                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                            
                         </a>
 
                         <a href="#" class="list-group-item list-group-item-action">
-                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                                          
+                            <div class="d-flex w-100 justify-content-between">
+                                <small style="font-weight: bolder; color: red">Chuyên mục</small>
+                                <small>Ngày đăng</small>
+                            </div>
 
                             <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo" style="object-fit: cover;">
 
-                            <div class="d-flex w-100 justify-content-between">
-                                <small>Chuyên mục</small>
-                                <small>Ngày đăng</small>
-                            </div>                            
+                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                            
                         </a>
 
                         <a href="#" class="list-group-item list-group-item-action">
-                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                                          
+                            <div class="d-flex w-100 justify-content-between">
+                                <small style="font-weight: bolder; color: red">Chuyên mục</small>
+                                <small>Ngày đăng</small>
+                            </div>
 
                             <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo" style="object-fit: cover;">
 
-                            <div class="d-flex w-100 justify-content-between">
-                                <small>Chuyên mục</small>
-                                <small>Ngày đăng</small>
-                            </div>                            
+                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                            
                         </a>
 
                         <a href="#" class="list-group-item list-group-item-action">
-                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                                          
+                            <div class="d-flex w-100 justify-content-between">
+                                <small style="font-weight: bolder; color: red">Chuyên mục</small>
+                                <small>Ngày đăng</small>
+                            </div>
 
                             <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo" style="object-fit: cover;">
 
-                            <div class="d-flex w-100 justify-content-between">
-                                <small>Chuyên mục</small>
-                                <small>Ngày đăng</small>
-                            </div>                            
+                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                            
                         </a>
 
                         <a href="#" class="list-group-item list-group-item-action">
-                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                                          
+                            <div class="d-flex w-100 justify-content-between">
+                                <small style="font-weight: bolder; color: red">Chuyên mục</small>
+                                <small>Ngày đăng</small>
+                            </div>
 
                             <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo" style="object-fit: cover;">
 
-                            <div class="d-flex w-100 justify-content-between">
-                                <small>Chuyên mục</small>
-                                <small>Ngày đăng</small>
-                            </div>                            
+                            <h5 class="mb-1 text-center">Tiêu đề Tiêu đề Tiêu đề</h5>                            
                         </a>
                     </div>
                     
