adjust UI for 2x home.hbs and article.hbs

--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -13,7 +13,7 @@
     {{{_sections.css}}}
 </head>
 
-<body style="background-color: #FFFFFF">
+<body style="background-color: #E6E9F1">
 
     <nav class="navbar navbar-expand-lg navbar-light"
         style="background: linear-gradient(90.13deg, #e30e16 18.76%, #c90009 96.9%);">
