--- a/views/vwHome/home.hbs
+++ b/views/vwHome/home.hbs
@@ -8,7 +8,7 @@
                     <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết nổi bật nhất trong tuần
                     </h2>
 
-                    <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+                    <div id="carouselId" class="carousel slide" data-ride="carousel" data-interval="5000">
                         <div class="carousel-inner">
 
                             <div class="carousel-item active">
@@ -83,7 +83,7 @@
                     <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết mới nhất
                     </h2>
 
-                    <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+                    <div id="carouselId" class="carousel slide" data-ride="carousel" data-interval="5000">
                         <div class="carousel-inner">
 
                             <div class="carousel-item active">
@@ -158,7 +158,7 @@
                     <h2 class="card-title text-center" style="font-weight: bolder;">Bài viết hot
                     </h2>
 
-                    <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+                    <div id="carouselId" class="carousel slide" data-ride="carousel" data-interval="5000">
                         <div class="carousel-inner">
 
                             <div class="carousel-item active">
