--- a/views/vwAuthent/login-register.hbs
+++ b/views/vwAuthent/login-register.hbs
@@ -40,10 +40,10 @@
                   Hoặc đăng nhập với tài khoản mạng xã hội
                 </p>
                 <div class="d-flex justify-content-center">
-                  <button class="btn btn-circle btn-primary mr-3"
+                  <a href="/auth/facebook" class="btn btn-circle btn-primary mr-3"
                     style="background-color: #3b5998; border: none; width: 40px; height: 40px;">
                     <i class="fab fa-facebook-f" style="color: white;"></i>
-                  </button>
+                  </a>
                   <a href="/auth/google" class="btn btn-circle btn-danger"
                     style="border: none; width: 40px; height: 40px;">
                     <i class="fab fa-google" style="color: white;"></i>
@@ -71,10 +71,10 @@
                     khoản mạng xã hội <br> Khi nhấn đăng nhập bạn đã đồng ý các <a href="#" id="termsLink">quy
                       định</a> của báo</p>
                   <div class="d-flex justify-content-center">
-                    <button class="btn btn-circle btn-primary mr-3"
+                    <a href="/auth/facebook" class="btn btn-circle btn-primary mr-3"
                       style="background-color: #3b5998; border: none; width: 40px; height: 40px;">
                       <i class="fab fa-facebook-f" style="color: white;"></i>
-                    </button>
+                    </a>
                     <a href="/auth/google" class="btn btn-circle btn-danger"
                       style="border: none; width: 40px; height: 40px;">
                       <i class="fab fa-google" style="color: white;"></i>
