Done flow đăng nhập và đăng xuất

--- a/views/vwAuthent/login-register.hbs
+++ b/views/vwAuthent/login-register.hbs
@@ -235,7 +235,7 @@
             title: "Đăng nhập thành công",
             confirmButtonColor: "#28a745",
           }).then(() => {
-            window.location.href = "/success-login";
+            window.location.href = "/";
           });
         }
       })
