--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -33,7 +33,7 @@
                     </div>
                 </form>
 
-                <a href="#" class="btn btn-primary"
+                <a href="/account" class="btn btn-primary"
                     style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-right: 10px;">
                     <i class="fas fa-user-circle fa-lg fa-fw" style="color: #fdfdfd;"></i>
                 </a>
